--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@
     <div class="audio-player">
         <div class="track-info">
             <div class="track-title">Phumbangnara Wakhal</div>
-            <div class="track-artist">EPIPHANY</div>
+            <div class="track-artist">EPIPHANI</div>
         </div>
         <div class="image">
             <img src="SongsIcon/Phumbangnara Wakhal.jpg" alt="Album Cover">
